1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_animate_message): Add a flag to select
	between trigger and schedule images.

	* ScheduleItem.[hm] ([ScheduleItem -trigger:X:Y:]): New method.

1998-09-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.[hm]: New function tkobjc_animate_message (only X support).

	* ScheduleItem.m (PendingEvent): Add.  Add getXForBar, getYForTime,
	and at:owner:widget:x:y:.

	* CanvasAbstractItem.[hm]: New method getCanvas.

1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ScheduleItem.[hm]: New files.

	* TextItem.h (TextItem): Add centeredFlag ivar.

	* TextItem.[hm]: New methods +createBegin: and -setCenterFlag:.

	* NodeItem.m ([NodeItem -createText],
	[NodeItem -createPaddedText]): Pass YES for centerFlag to
	tkobjc_createText.

	* Makefile.am (SRC, tkobjc_HEADERS): Add ScheduleItem.

	* CanvasItem.m ([CanvasItem -drop]): New method.

	* CanvasAbstractItem.h (CanvasAbstractItem): Remove item ivar.

	* CanvasItem.h, NodeItem.h: Add item var.

	* common.[hm] (tkobjc_createText): Add centerFlag for switching
	between centered and left justified.

	* TextItem.m ([TextItem -createItem]): Pass canvas as first
	argument to tkobjc_createText.

	* Circle.[hm]: Change argument type of setRadius: to unsigned.

1998-09-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (keep_inside_screen):  Account for border width in
	X11 version.  Do a Tk event sync after move.
	(tkobjc_pixmap_create_from_widget): In X11 version, do
	keep_inside_screen before check_for_overlaps so that
	coordinate comparisons will be what they ultimately must.
	In Win32 version, call keep_inside_screen with topWindow.
	Call keep_Use SetWindowPos to make topWindow topmost for snapshot.
	Do Tk sync and GdiFlush before snapshot.

1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.[hm] ([Pixmap -setDecorationsFlag:], [Pixmap +createBegin:],