@@ -1,5 +1,9 @@
 1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* CompleteProbeDisplayLabel.[hm] (CompleteProbeDisplayLabel): Remove
+	probeDisplayManager and setter.  Use an extern to the singleton global
+	object.
+
 	* internal.m (tkobjc_animate_message): Add a flag to select
 	between trigger and schedule images.
 
